<resources>
    <string name="app_name">Stellarium</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_information">ИНФОРМАЦИЯ</string>
    <string name="text_information">Задача организации, в особенности же рамки и место обучения кадров в значительной степени обуславливает создание модели развития. С другой стороны дальнейшее развитие различных форм деятельности требуют от нас анализа существенных финансовых и административных условий. Повседневная практика показывает, что реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции требуют от нас анализа соответствующий условий активизации.

    Товарищи! сложившаяся структура организации требуют определения и уточнения систем массового участия. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки позиций, занимаемых участниками в отношении поставленных задач. Товарищи! консультация с широким активом влечет за собой процесс внедрения и модернизации соответствующий условий активизации. Значимость этих проблем настолько очевидна, что сложившаяся структура организации обеспечивает широкому кругу (специалистов) участие в формировании форм развития. Идейные соображения высшего порядка, а также дальнейшее развитие различных форм деятельности способствует подготовки и реализации системы обучения кадров, соответствует насущным потребностям. Разнообразный и богатый опыт укрепление и развитие структуры играет важную роль в формировании направлений прогрессивного развития.

        Разнообразный и богатый опыт укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании существенных финансовых и административных условий. Разнообразный и богатый опыт реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Не следует, однако забывать, что рамки и место обучения кадров в значительной степени обуславливает создание направлений прогрессивного развития. Значимость этих проблем настолько очевидна, что постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по разработке соответствующий условий активизации.
    </string>
    <string name="affirmation_name">Аффирмация</string>
    <string name="horoscope_name">Гороскоп</string>
    <string name="taro_name">Карты Таро</string>
    <string name="compatibility_name">Совместимость</string>
    <string name="moon_name">Лунный календарь</string>
    <string name="numerologic_name">Нумерология</string>
    <string name="square_name">Квадрат Пифагора</string>
    <string name="yes_no_name">Шар судьбы</string>
    <string name="hello">Добрый день, Андрей!</string>
    <string name="title_registration">Добро пожаловать!</string>
    <string name="name">Имя</string>
    <string name="birthday_day">Дата рождения</string>
    <string name="registration_button">Далее</string>
    <string name="content_description_man">Выбран мужской пол</string>
    <string name="content_description_woman">Выбран женский пол</string>
    <string name="aries">Овен</string>
    <string name="taurus">Телец</string>
    <string name="gemini">Близнецы</string>
    <string name="cancer">Рак</string>
    <string name="leo">Лев</string>
    <string name="virgo">Дева</string>
    <string name="libra">Весы</string>
    <string name="scorpio">Скорпион</string>
    <string name="sagittarius">Стрелец</string>
    <string name="capricorn">Козерог</string>
    <string name="aquarius">Водолей</string>
    <string name="pisces">Рыбы</string>
    <string name="personality">характер</string>
    <string name="personality_number">111</string>
    <string name="health">здоровье</string>
    <string name="health_number">222</string>
    <string name="luck">везение</string>
    <string name="luck_number">333</string>
    <string name="energy">энергия</string>
    <string name="energy_number">444</string>
    <string name="logic">логика</string>
    <string name="logic_number">555</string>
    <string name="duty">долг</string>
    <string name="duty_number">666</string>
    <string name="interest">интерес</string>
    <string name="interest_number">777</string>
    <string name="labor">труд</string>
    <string name="labor_number">888</string>
    <string name="mind_memory">ум, память</string>
    <string name="mind_memory_number">999</string>
    <string name="enter_birthday_date">Введите свою дату рождения, чтобы составить Квадрат Пифагора</string>
    <string name="characteristic">ХАРАКТЕРИСТИКА</string>
    <string name="some_sign_and_date">Водолей | 21 января - 19 февраля</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="yesterday">Вчера</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="commonHoroscope">Общий гороскоп</string>
    <string name="loveHoroscope">Любовный гороскоп</string>
    <string name="healthHoroscope">Здоровье</string>
    <string name="business">Бизнес</string>
    <string name="description">Описание</string>
    <string name="character">Характер</string>
    <string name="love">Любовь</string>
    <string name="career">Карьера</string>
    <string name="show_results">Показать результаты</string>
    <string name="ball_ask_button">Спросить</string>
    <string name="ball_clear_button">Очистить</string>
    <string name="title_yes_or_no">Внимательно подумайте о своем вопросе и спросите шар...</string>
    <string name="man">Мужчина</string>
    <string name="woman">Женщина</string>
    <string name="love_lowercase">любовь</string>
    <string name="marriage">брак</string>
    <string name="sex">секс</string>
    <string name="friendship">дружба</string>
    <string name="work">работа</string>
    <string name="choose_zodiac_signs">Выберите знаки зодиака</string>
    <string name="enter_names">Введите имена</string>
    <string name="compatibilityByName">Совместимость по именам</string>
    <string name="compatibility_by_zodiac_signs">Совместимость по знакам зодиака</string>
    <string name="affirmation_title">Следующая аффирмация будет завтра</string>
    <string name="affirmation_text">Текст аффирмации</string>
    <string name="some_date">2 февраля</string>
    <string name="enter_date_numerologic">Введите свою дату рождения, чтобы узнать число судьбы:</string>
    <string name="fate_number">Число судьбы - 8</string>
    <string name="numerologic_information">Какая-то инфа</string>
    <string name="numerologic_button_generalCharacter">Общее</string>
    <string name="numerologic_button_advantages">Достоинства</string>
    <string name="numerologic_button_disadvantages">Недостатки</string>
    <string name="numerologic_button_purpose">Судьба</string>
    <string name="title_activity_main_registration">ActivityMainRegistration</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_test">testActivity</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="sign_in">Вход</string>
    <string name="one_card">Гадание таро «Одна карта»</string>
    <string name="day_card">Гадание таро «Карта дня»</string>
    <string name="three_cards">Гадание таро «Три карты»</string>
    <string name="seven_stars">Гадание таро «Семь звезд»</string>
    <string name="pyramid_of_lovers">Гадание таро «Пирамида влюбленных»</string>
    <string name="guess">Гадать</string>
    <string name="description_seven_stars">Гадание таро «Семь звезд» - гадание на отношения. Гадание поможет разобраться в любовных отношениях, понять характер и мысли партнера, узнать, что мешает и помогает отношениям, и каковы перспективы вашего союза.</string>
    <string name="description_day_card">Гадание таро «Карта дня» - наша жизнь как калейдоскоп, события сменяются за событиями, рутина, действия, куда-то постоянно торопимся. Как прожить день так, чтобы остаться довольным самим собой, использовать все возможности, которые преподносит грядущий день? Расклад Карта дня поможет вам найти ответ, заглянуть в ближайшее будущее.</string>
    <string name="description_one_card">Гадание таро «Одна карта» - для получения быстрого ответа на ваш вопрос в этом гадании достаточно вытянуть одну карту, в этом случае ответ вы получаете предельно однозначный, так как нет других карт, которые могли бы вас запутать. В гадании используется колода карт со старшими и младшими арканами.</string>
    <string name="description_pyramid_of_lovers">Гадание таро «Пирамида влюбленных» - это гадание на старших арканах, раскладка с одной стороны простая, но в то же время очень глубока: она поможет вам разобраться в сложных и запутанных отношениях, найти ответ на ваш вопрос.</string>
    <string name="description_three_cards">Гадание таро «Три карты» - с помощью этого раклада вы получите ответ на развитие текущей ситуации. Первая карта расскажет о прошлом, вторая - о настоящем, третья - о возможном будущем.</string>
    <string name="ok">Готово</string>
    <string name="facebook_app_id">1292672574576885</string>
    <string name="fb_login_protocol_scheme">fb1292672574576885</string>
    <string name="title_phase">Фаза Луны</string>
    <string name="title_characteristic">Характеристика дня</string>
    <string name="title_health">Здоровье</string>
    <string name="title_relations">Отношения и любовь</string>
    <string name="title_business">Работа и бизнес</string>
    <string name="skip_registration">Пропустить</string>
    <string name="info_affirmation">Аффирмациями называются позитивные утверждения, в которых делается акцент на чём-либо, в чём нуждается человек, и направленные на изменение образа мыслей и убеждений в положительном направлении. Аффирмации могут произноситься как вслух, так и про себя. При правильном и регулярном применении они могут повлиять на будущее человека и изменить его жизнь, привнося в неё гармонию, счастье, любовь, благополучие и здоровье. Постоянное повторение аффирмации достаточно простого и короткого текста есть одно из условий, при которых у человека может возникнуть Изменённое Состояние Сознания. Тогда информация, которую несёт текст аффирмации, минует фильтры левого (критического) полушария головного мозга и воспринимается как руководство к действию, более того, воспринимается как уже существующее, воплощённое нами же бытие.</string>
    <string name="info_horoscope">Гороскоп — это упорядоченное отображение взаимного расположения планет на звёздном небе в определенный промежуток времени по знакам зодиака. Используется в астрологии с целью предсказания судьбы. Также гороскопами в народе называют непосредственно опубликованные астрологами прогнозы для различных солнечных знаков, которые ввёл в обращение Алан Лео.</string>
    <string name="try_again">Попробовать снова</string>
    <string name="confirm_email">Вам на почту было отправлено письмо с ссылкой на подтверждение аккаунта.</string>
    <string name="check_spam_folder">Не забудьте проверить папку спам.</string>
    <string name="something_went_wrong">Что-то пошло не так…</string>
</resources>