<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_for_reset_password"
    android:layout_marginRight="40dp"
    android:layout_marginLeft="40dp">

    <LinearLayout
        android:id="@+id/layout_email_dialog_error"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <View
            android:layout_width="match_parent"
            android:layout_height="130dp" />

        <TextView
            android:id="@+id/text_email_dialog_error"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:fontFamily="@font/gabriela_regular"
            android:gravity="center"
            android:text="@string/something_went_wrong"
            android:textColor="#3831AC"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_error_email_dialog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:background="@drawable/background_for_button_reset_password"
                android:fontFamily="@font/gabriela_regular"
                android:text="@string/try_again"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gif_email_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:src="@drawable/white_gif_loading" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/email_dialog_text_confirm"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:fontFamily="@font/gabriela_regular"
            android:gravity="center"
            android:text="@string/confirm_email"
            android:textColor="@color/white"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/text_dialog"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:fontFamily="@font/gabriela_regular"
            android:gravity="center"
            android:text="@string/check_spam_folder"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>
</FrameLayout>

